# clear

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements-benchmark.txt  requirements-dev.txt  requirements-serve.txt  requirements.txt
clearvad/: __init__.py
clearvad/distill/: __init__.py  augment.py  constructed_data.py  firered_teacher.py  forced_align.py  losses.py  multi_teacher.py  nemo_teacher.py  pyannote_teacher.py  real_data.py  real_noise.py  rir.py  synthetic_gen.py  teacher.py  ten_teacher.py  trainer.py
clearvad/evaluation/: __init__.py  eval_dataset.py  external_vads.py  metrics.py  webrtc_baseline.py
clearvad/export/: __init__.py  benchmark_onnx.py  quantize.py  to_onnx.py  validate_onnx.py
clearvad/model/: __init__.py  cfc.py  clearvad_model.py  encoder.py  factory.py  frontend.py  gssm.py  head.py  liquid_vad.py  silero_compat.py
clearvad/postprocess/: __init__.py  calibrate.py  smoother.py
clearvad/serving/: __init__.py  app.py  benchmark_app.py
clearvad/utils/: __init__.py  audio.py  config.py  logging_utils.py
configs/eval/: benchmark.yaml
configs/export/: onnx_fp16.yaml  onnx_fp32.yaml  onnx_int8.yaml
configs/model/: clearvad_base.yaml  clearvad_lite.yaml  (+4 more)
hf/: README.md  inference_example.py
reports/: final_benchmark.md
scripts/: __init__.py  benchmark_all.py  benchmark_silero.py  build_aligned_eval.py  build_eval_set.py  calibrate_postproc.py  compare_models.py  dissect_silero.py  export_onnx.py  generate_synthetic.py  log_environment.py  make_demo_samples.py  prepare_hf.py  silero_failures.py  test_nemo.py  test_pyannote.py  test_ten.py  train_dfkd.py
tests/: conftest.py  export_helpers.py  smoke_test_training.py  test_audio.py  test_constructed_data.py  test_dfkd_loss.py  test_encoder.py  test_frontend.py  test_full_model.py  test_gssm.py  test_metrics.py  test_multi_teacher.py  test_onnx_export.py  test_onnx_quantized.py  test_real_noise.py  test_silero_wrapper.py  test_smoother.py  test_standard_metrics.py  test_synthetic_gen.py
(+25 files in other folders)
